--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/koa": "^2.0.46",
+    "@types/koa-helmet": "^3.1.2",
     "@types/node": "^10.9.4",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
@@ -21,6 +22,7 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
-    "koa": "^2.5.3"
+    "koa": "^2.5.3",
+    "koa-helmet": "^4.0.0"
   }
 }
