add dockerignore, modify docker-compose config to be better suited for development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3'
 services:
   server:
     build: .
+    command: node_modules/nodemon/bin/nodemon.js --watch 'src/**/*.ts' --exec 'node_modules/ts-node/dist/bin.js' src/index.ts
     ports:
       - 8080:8080
     volumes:
-      - ./dist:/server/dist
+      - .:/server/
     tty: true
     depends_on:
       - postgres
