--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "dependencies": {
     "@types/koa-router": "^7.0.31",
+    "dotenv": "^6.0.0",
+    "knex": "^0.15.2",
     "koa": "^2.5.3",
     "koa-body": "^4.0.4",
     "koa-helmet": "^4.0.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "pg": "^7.4.3"
   }
 }
