--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "url": "git@version.aalto.fi:hallast1/CS-E4400_hallussa-webapp.git"
   },
   "devDependencies": {
+    "@types/knex": "^0.14.24",
     "@types/koa": "^2.0.46",
     "@types/koa-helmet": "^3.1.2",
+    "@types/koa-router": "^7.0.31",
     "@types/node": "^10.9.4",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
@@ -22,7 +24,6 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
-    "@types/koa-router": "^7.0.31",
     "dotenv": "^6.0.0",
     "knex": "^0.15.2",
     "koa": "^2.5.3",
