--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
     "@types/node": "^10.9.4",
+    "@types/pg": "^7.4.10",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
