--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-body": "^4.0.4",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
+    "objection": "^1.2.6",
     "pg": "^7.4.3"
   }
 }
