--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "git@version.aalto.fi:hallast1/CS-E4400_hallussa-webapp.git"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/knex": "^0.14.24",
     "@types/koa": "^2.0.46",
     "@types/koa-helmet": "^3.1.2",
