--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "url": "git@version.aalto.fi:hallast1/CS-E4400_hallussa-webapp.git"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.1",
     "@types/dotenv": "^4.0.3",
     "@types/knex": "^0.14.24",
     "@types/koa": "^2.0.46",
+    "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
     "@types/node": "^10.9.4",
     "@types/pg": "^7.4.10",
+    "@types/ramda": "^0.25.38",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -26,13 +29,15 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^6.0.0",
     "knex": "^0.15.2",
     "koa": "^2.5.3",
-    "koa-body": "^4.0.4",
+    "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
     "objection": "^1.2.6",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "ramda": "^0.25.0"
   }
 }
