--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
     "@types/dotenv": "^4.0.3",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/knex": "^0.14.24",
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
@@ -31,6 +32,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.0.0",
+    "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
