--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
+    "@types/mongodb": "^3.1.10",
+    "@types/mongoose": "^5.2.18",
     "@types/node": "^10.9.4",
     "@types/pg": "^7.4.10",
     "@types/ramda": "^0.25.38",
@@ -38,8 +40,11 @@
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
+    "mongoose": "^5.3.1",
     "objection": "^1.2.6",
     "pg": "^7.4.3",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "reflect-metadata": "^0.1.12",
+    "typegoose": "^5.4.1"
   }
 }
