--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": false
   },
   "exclude": [
     "node_modules"
