--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.3.1",
+    "mongoose": "5.0.0",
     "objection": "^1.2.6",
     "pg": "^7.4.3",
     "ramda": "^0.25.0",
