--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
