--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
+    "@types/mailgun-js": "^0.16.0",
     "@types/node": "^10.9.4",
     "@types/pg": "^7.4.10",
     "@types/ramda": "^0.25.38",
+    "@types/react": "^16.4.16",
+    "@types/react-dom": "^16.0.9",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -38,8 +41,11 @@
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
+    "mailgun-js": "^0.21.0",
     "objection": "^1.2.6",
     "pg": "^7.4.3",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
