--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "postinstall": "tsc",
     "watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
