--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "postinstall": "tsc",
     "watch": "tsc -w",
+    "migrate": "knex migrate:latest --knexfile knex.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
