--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/koa-router": "^7.0.31",
     "@types/node": "^10.9.4",
     "@types/pg": "^7.4.10",
+    "@types/qrcode": "^1.3.0",
     "@types/ramda": "^0.25.38",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
@@ -40,6 +41,8 @@
     "koa-router": "^7.4.0",
     "objection": "^1.2.6",
     "pg": "^7.4.3",
+    "phantom": "^6.0.3",
+    "qrcode": "^1.3.2",
     "ramda": "^0.25.0"
   }
 }
