--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/pg": "^7.4.10",
     "@types/qrcode": "^1.3.0",
     "@types/ramda": "^0.25.38",
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -42,6 +44,8 @@
     "objection": "^1.2.6",
     "pg": "^7.4.3",
     "qrcode": "^1.3.2",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
