Fix nodemon for Windows 10

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   server:
     build: .
-    command: node_modules/nodemon/bin/nodemon.js --watch 'src/**/*.ts' --exec 'node_modules/ts-node/dist/bin.js' src/index.ts
+    command: npm run watch
     ports:
       - 8080:8080
     volumes:
