--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^4.0.3",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/knex": "^0.14.24",
