--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "./node_modules/ts-node/dist/bin.js src/index.ts",
     "watch": "./node_modules/nodemon/bin/nodemon.js --legacy-watch",
     "migrate": "knex migrate:latest --knexfile knex.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "tslint -c tslint.json './src/**/*.ts{,x}'"
   },
   "repository": {
     "type": "git",
@@ -14,13 +15,17 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^4.0.3",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/knex": "^0.14.24",
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-helmet": "^3.1.2",
+    "@types/koa-mount": "^3.0.1",
     "@types/koa-router": "^7.0.31",
+    "@types/koa-static": "^4.0.0",
+    "@types/mailgun-js": "^0.16.0",
     "@types/node": "^10.9.4",
     "@types/pg": "^7.4.10",
     "@types/qrcode": "^1.3.0",
@@ -35,6 +40,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
@@ -43,7 +49,10 @@
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
+    "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "mailgun-js": "^0.21.0",
     "objection": "^1.2.6",
     "pg": "^7.4.3",
     "qrcode": "^1.3.2",
