--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "hallussa-webapp",
+  "name": "hallussa-backend",
   "description": "",
   "scripts": {
     "build": "tsc",
-    "start": "./node_modules/ts-node/dist/bin.js src/index.ts",
-    "watch": "./node_modules/nodemon/bin/nodemon.js --legacy-watch",
+    "start": "./node_modules/nodemon/bin/nodemon.js ./dist/src/index.js",
+    "watch": "tsc --watch",
     "migrate": "knex migrate:latest --knexfile knex.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tslint -c tslint.json './src/**/*.ts{,x}'"
   },
   "repository": {
     "type": "git",
-    "url": "git@version.aalto.fi:hallast1/CS-E4400_hallussa-webapp.git"
+    "url": "git@version.aalto.fi:hallast1/CS-E4400_hallussa-backend.git"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
@@ -33,7 +33,6 @@
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "nodemon": "^1.18.4",
-    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.0.3"
