--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "tsc",
     "start": "./node_modules/nodemon/bin/nodemon.js ./dist/src/index.js",
     "watch": "tsc --watch",
-    "migrate": "knex migrate:latest --knexfile knex.ts",
+    "migrate": "knex migrate:latest --knexfile ./dist/knex.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tslint -c tslint.json './src/**/*.ts{,x}'"
   },
