--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
-    "@types/dotenv": "^4.0.3",
-    "@types/jsonwebtoken": "^7.2.8",
-    "@types/knex": "^0.14.24",
+    "@types/dotenv": "^6.1.1",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/knex": "^0.16.1",
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
     "@types/koa-static": "^4.0.0",
     "@types/mailgun-js": "^0.16.0",
-    "@types/node": "^10.9.4",
+    "@types/node": "^11.13.4",
     "@types/pg": "^7.4.10",
     "@types/qrcode": "^1.3.0",
-    "@types/ramda": "^0.25.38",
+    "@types/ramda": "^0.26.6",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "nodemon": "^1.18.4",
+    "ts-node": "^8.0.3",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.1.6"
@@ -40,20 +41,20 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "date-fns": "^1.29.0",
-    "dotenv": "^6.0.0",
-    "emotion": "^9.2.12",
-    "emotion-server": "^9.2.12",
+    "dotenv": "^7.0.0",
+    "emotion": "^10.0.9",
+    "emotion-server": "^10.0.9",
     "jsonwebtoken": "^8.3.0",
-    "knex": "^0.15.2",
+    "knex": "^0.16.5",
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
-    "mailgun-js": "^0.21.0",
+    "mailgun-js": "^0.22.0",
     "objection": "^1.2.6",
     "pg": "^7.4.3",
     "qrcode": "^1.3.2",
-    "ramda": "^0.25.0",
+    "ramda": "^0.26.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   },
