--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "build": "./node_modules/typescript/bin/tsc",
     "start": "./node_modules/nodemon/bin/nodemon.js ./dist/src/index.js",
-    "watch": "./node_modules/typescript/bin/tsc --watch",
-    "migrate": "knex migrate:latest --knexfile knex.ts",
-    "seed": "knex seed:run --knexfile knex.ts",
+    "watch": "tsc --watch",
+    "migrate": "ts-node -P ./tsconfig.json node_modules/knex/bin/cli.js migrate:latest --knexfile knex.ts",
+    "migrate:rollback": "ts-node -P ./tsconfig.json node_modules/knex/bin/cli.js migrate:rollback --knexfile knex.ts",
+    "seed": "ts-node -P ./tsconfig.json node_modules/knex/bin/cli.js seed:run --knexfile knex.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tslint -c tslint.json -p tsconfig.json './src/**/*.ts{,x}'",
     "prelint": "tsc -p tsconfig.json --noEmit"
@@ -21,14 +22,13 @@
     "@types/bcryptjs": "^2.4.1",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/knex": "^0.16.1",
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
     "@types/koa-static": "^4.0.0",
     "@types/mailgun-js": "^0.16.0",
-    "@types/node": "^11.13.4",
+    "@types/node": "^12.0.10",
     "@types/pg": "^7.4.10",
     "@types/qrcode": "^1.3.0",
     "@types/ramda": "^0.26.6",
@@ -45,11 +45,11 @@
     "bcryptjs": "^2.4.3",
     "change-case": "^3.1.0",
     "date-fns": "^1.29.0",
-    "dotenv": "^7.0.0",
+    "dotenv": "^8.0.0",
     "emotion": "^10.0.9",
     "emotion-server": "^10.0.9",
     "jsonwebtoken": "^8.3.0",
-    "knex": "^0.16.5",
+    "knex": "^0.18.1",
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
