--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
     "@types/koa-static": "^4.0.0",
-    "@types/mailgun-js": "^0.22.3",
     "@types/node": "^12.7.1",
     "@types/pg": "^7.4.10",
     "@types/qrcode": "^1.3.0",
@@ -42,6 +41,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "change-case": "^3.1.0",
     "date-fns": "^1.29.0",
@@ -55,7 +55,6 @@
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
-    "mailgun-js": "^0.22.0",
     "objection": "^1.2.6",
     "pg": "^7.12.1",
     "qrcode": "^1.4.1",
