--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/ramda": "^0.26.19",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
+    "@types/socket.io": "^2.1.2",
     "knex-seed-file": "^1.0.2",
     "nodemon": "^1.18.4",
     "ts-node": "^8.1.0",
@@ -60,7 +61,8 @@
     "qrcode": "^1.4.1",
     "ramda": "^0.26.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "socket.io": "^2.2.0"
   },
   "engines": {
     "node": "11.x"
